--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,74 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Nunito', sans-serif;
+    text-align: center;
+}
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: green;
+    background: orange;
+}
+.container {
+    width: 800px;
+    background: blue;
+}
+.header {
+    height: 40px;
+    background: red;
+}
+.picker {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    height: 200px;
+    background: yellow;
+}
+.input {
+    width: 40%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: white;
+}
+.display {
+    background: red;
+    border-radius: 20px;
+    width: 15%;
+    height: 100%;
+}
+.outputs {
+    width: 30%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: pink;
+}
+.outputs p {
+    margin-bottom: 5px;
+    background: red;
+}
+.outputs button {
+    width: 50%;
+    height: 20px;
+    color: red;
+}
+.palettes {
+    width: 800px;
+    background: white;
+}
+
+/*
 body {
     background: none;
     max-width: 500px;
@@ -40,3 +111,4 @@ li {
     margin-top: 10px;
     list-style: none;
 }
+*/
