--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,11 @@ body {
     background: none;
 }
 
+h1, p {
+    margin: 0;
+    padding: 0;
+}
+
 .container {
     width: 600px;
     height: 600px;
@@ -25,18 +30,28 @@ body {
     left: 50%;
     margin: -300px 0 0 -300px;
 
-    border: solid black 1px;
+    /* border: solid black 1px; */
     background: orange;
 }
 
 .header {
+    margin: 0;
+    padding: 0;
     height: 40px;
     margin-bottom: 0px;
     background: lightblue;
 }
+
 .input-section {
+    margin: 0;
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     background: lightpink;
 }
+
 .user-input {
     background: lightcoral;
 }
@@ -70,18 +85,15 @@ body {
 }
 
 .output-section {
-    background: green;
+    margin: 0;
+    padding: 10px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    background: green;
 }
-.display {
-    border-radius: 20px;
-    width: 40%;
-    height: 100%;
-    background: rgb(130, 130, 130);
-}
+
 .outputs {
     width: 40%;
     height: 100%;
@@ -97,6 +109,21 @@ body {
 .outputs button {
     width: 50%;
     height: 20px;
+}
+
+.shades {
+    margin-top: 10px;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    background: lightsalmon;
+}
+
+.display {
+    border-radius: 20px;
+    width: 100px;
+    height: 200px;
+    background: rgb(130, 130, 130);
 }
 
 .footer {
