--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ h1, p {
     margin: -300px 0 0 -300px;
 
     border: solid black 3px;
-    background: orange;
+    background: rgb(255, 166, 77);
 }
 
 .header {
@@ -39,7 +39,7 @@ h1, p {
     padding: 0;
     height: 40px;
     margin-bottom: 0px;
-    background: lightblue;
+    /*background: lightblue;*/
 }
 
 .input-section {
@@ -49,11 +49,11 @@ h1, p {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background: lightpink;
+    /*background: lightpink;*/
 }
 
 .user-input {
-    background: lightcoral;
+    /*background: lightcoral;*/
 }
 .picker {
     display: flex;
@@ -70,7 +70,7 @@ h1, p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: lightseagreen;
+    /*background: lightseagreen;*/
 }
 .input input {
     width: 90%;
@@ -91,7 +91,7 @@ h1, p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: green;
+    /*background: green;*/
 }
 
 .outputs {
@@ -102,7 +102,7 @@ h1, p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: lightgreen;
+    /*background: lightgreen;*/
 }
 .outputs p {
 }
@@ -115,45 +115,45 @@ h1, p {
     margin-top: 10px;
     display: flex;
     flex-direction: row;
-    background: lightsalmon;
+    /*background: lightsalmon;*/
     align-items: center;
     justify-content: center;
 }
 
 .display {
-    border-radius: 25px;
+    border-radius: 7.5px;
     width: 100px;
-    height: 200px;
+    height: 249px;
     background: rgb(130, 130, 130);
 }
 
 .shades1, .shades2, .shades3 {
-    margin-right: 10px;
+    margin-right: 20px;
     padding: 0;
-    border-radius: 20px;
-    width: 60px;
-    height: 150px;
+    border-radius: 5px;
+    width: 50px;
+    height: 170px;
     background: rgb(130, 130, 130);
     background: hsl(0%, 0%, 50%);
 }
 
 .shades4, .shades5, .shades6 {
-    margin-left: 10px;
+    margin-left: 20px;
     padding: 0;
-    border-radius: 20px;
-    width: 60px;
-    height: 150px;
+    border-radius: 5px;
+    width: 50px;
+    height: 170px;
     background: rgb(130, 130, 130);
 }
 
 .lighter-darker {
     margin-top: 10px;
     width: 100%;
-    background: blanchedalmond;
+    /*background: blanchedalmond;*/
 }
 
 .footer {
-    background: rgba(255, 255, 255, 0.4);
+    /*background: rgba(255, 255, 255, 0.4);*/
 }
 
 /*
